gestion produit finale

--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -37,7 +37,7 @@
 			<hr class="horizontal dark mt-0">
 			<div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
 				<ul class="navbar-nav">
-					{% for item in ['dashboard', 'tables','cinema', 'billing', 'virtual-reality', 'rtl', 'profile', 'sign-in', 'sign-up'] %}
+					{% for item in ['categorie', 'tables','cinema', 'billing', 'virtual-reality', 'rtl', 'profile', 'sign-in', 'sign-up'] %}
 						<li class="nav-item">
 							<a class="nav-link {% if item == 'billing' %}active{% endif %}" href="../pages/{{ item }}.html.twig">
 								<div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
