--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -7,12 +7,16 @@
 		<title>Planet</title>
 		<link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
 		<link href="{{ asset('css/font-awesome.min.css') }}" rel="stylesheet">
-		<link href="{{ asset('css/global.css') }}" rel="stylesheet"> {% block pageStyle %}{% endblock %}
+		<link href="{{ asset('css/global.css') }}" rel="stylesheet"> {% block pageStyle %} 
+		
+		
+		{% endblock %}
 		<link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
 		<script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
 
 
 	</head>
+
 	{% block body %}
 		{% block header %}
 			<section id="top">
@@ -127,11 +131,20 @@
 											<a class="dropdown-item border-0" href="contact.html.twig">Contact</a>
 										</li>
 									</ul>
+									
 								</li>
 
 								<li class="nav-item">
 									<a class="nav-link" href="contact.html.twig">Contact Us</a>
 								</li>
+								<li class="nav-item" >
+									<a class="nav-link " href="{{ path('app_panier_liste') }}" >       
+									<svg   viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M21 5L19 12H7.37671M20 16H8L6 3H3M13.5 3V9M13.5 3L11.5 5M13.5 3L15.5 5M9 20C9 20.5523 8.55228 21 8 21C7.44772 21 7 20.5523 7 20C7 19.4477 7.44772 19 8 19C8.55228 19 9 19.4477 9 20ZM20 20C20 20.5523 19.5523 21 19 21C18.4477 21 18 20.5523 18 20C18 19.4477 18.4477 19 19 19C19.5523 19 20 19.4477 20 20Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+										
+									</a>
+								</li>
+				
+
 							</ul>
 						</div>
 					</div>
