--- a/templates/categorie_produit/tables.html.twig
+++ b/templates/categorie_produit/tables.html.twig
@@ -154,11 +154,13 @@
 						<div class="card-body px-0 pt-0 pb-2">
 							<div class="table-responsive p-0">
 
-								<table class="table align-items-center mb-0">
+								<table id="productTable" class="table align-items-center mb-0">
 									<thead>
 										<tr>
 											<th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Category</th>
 											<th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Description</th>
+											<th></th>
+											<th></th>
 
 											<th class="text-secondary opacity-7"></th>
 										</tr>
@@ -229,6 +231,8 @@
 											<th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Budget</th>
 											<th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Status</th>
 											<th class="text-uppercase text-secondary text-xxs font-weight-bolder text-center opacity-7 ps-2">Completion</th>
+											<th></th>
+											<th></th>
 											<th></th>
 										</tr>
 									</thead>
@@ -550,4 +554,18 @@ const modalToggle = document.getElementById("{{ 'staticBackdrop' ~ formUpdateNum
 myModal.show(modalToggle);
 		</script>
 	{% endif %}
+
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<script src="https://cdn.datatables.net/2.0.5/js/dataTables.min.js"></script>
+
+		<script>
+			$('#productTable').DataTable({
+			"pagingType": "full_numbers",
+			"lengthMenu": [
+				[3, 25, 50, -1],
+				[3, 25, 50, "All"]
+			],
+			responsive: true,
+		})
+		</script>
 </body>{% endblock %}
