--- a/templates/evenement/edit.html.twig
+++ b/templates/evenement/edit.html.twig
@@ -13,7 +13,7 @@
         </div>
 
         <div class="mt-4">
-            <a href="{{ path('app_evenement_index') }}" class="btn btn-outline-secondary">
+            <a href="{{ path('app_evenement_affichback') }}" class="btn btn-outline-secondary">
                 <i class="fas fa-arrow-left mr-2"></i>Back to List
             </a>
 
