--- a/templates/series/index.html.twig
+++ b/templates/series/index.html.twig
@@ -14,11 +14,7 @@
                 <th>Directeur</th>
                 <th>Pays</th>
                 <th>Image</th>
-                <th>Liked</th>
-                <th>Nblikes</th>
-                <th>Disliked</th>
-                <th>Nbdislikes</th>
-                <th>Idcategorie</th>
+                <th>Categories</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -31,12 +27,14 @@
                 <td>{{ series.directeur }}</td>
                 <td>{{ series.pays }}</td>
                 <td>{{ series.image }}</td>
-                <td>{{ series.liked }}</td>
-                <td>{{ series.nblikes }}</td>
-                <td>{{ series.disliked }}</td>
-                <td>{{ series.nbdislikes }}</td>
-                <td>{{ series.idcategorie }}</td>
-                <td>
+       <td>
+    {% if series.idcategorie is not null %}
+        {{ series.idcategorie.nom }}
+    {% else %}
+        Aucune catégorie associée
+    {% endif %}
+    </td>             
+          <td>
                     <a href="{{ path('app_series_show', {'idserie': series.idserie}) }}">show</a>
                     <a href="{{ path('app_series_edit', {'idserie': series.idserie}) }}">edit</a>
                 </td>
